--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.1.0",
+    "saucelabs": "^1.5.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
